--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"prefix" : "",
-	"token" : "",
-	"delay" : "delay in secs without any unit, for eg: 5",
-	"log_dms" : "enable or disable the logging after each DM"
+	"prefix" : ">",
+	"token" : "ODkwOTUwOTMxNTc3OTY2NjEy.YU3Qtw.GHPNQCyhenkn-QGzdUrcALGkRdA",
+	"delay" : "0",
+	"log_dms" : "on"
 }
